--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.1",
     "@headlessui/react": "^1.4.2",
     "axios": "^0.21.1",
+    "graphql": "^16.8.1",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
