--- a/package.json
+++ b/package.json
@@ -1,37 +1,44 @@
 {
-  "name": "nextjs-memo-test",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.10.1",
-    "@headlessui/react": "^1.4.2",
-    "axios": "^0.21.1",
-    "graphql": "^16.8.1",
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "swr": "^1.3.0"
-  },
-  "devDependencies": {
-    "@babel/eslint-parser": "^7.12.1",
-    "@babel/preset-react": "^7.18.6",
-    "@next/eslint-plugin-next": "^10.0.4",
-    "@tailwindcss/forms": "^0.5.2",
-    "autoprefixer": "^10.4.2",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^8.27.0",
-    "eslint-config-next": "^14.0.3",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-prettier": "^3.3.0",
-    "postcss": "^8.4.6",
-    "prettier": "2.2.1",
-    "tailwindcss": "^3.0.22"
-  }
+    "name": "nextjs-memo-test",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "lint:fix": "next lint --fix",
+        "prettier:fix": "prettier --write --ignore-path .gitignore .",
+        "tsc:check": "tsc --noEmit"
+    },
+    "dependencies": {
+        "@apollo/client": "^3.10.1",
+        "@headlessui/react": "^1.4.2",
+        "axios": "^0.21.1",
+        "graphql": "^16.8.1",
+        "next": "^14.1.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "swr": "^1.3.0"
+    },
+    "devDependencies": {
+        "@babel/eslint-parser": "^7.12.1",
+        "@babel/preset-react": "^7.18.6",
+        "@next/eslint-plugin-next": "^10.0.4",
+        "@tailwindcss/forms": "^0.5.2",
+        "@types/node": "^20.12.7",
+        "@types/react": "^18.3.1",
+        "@typescript-eslint/eslint-plugin": "^7.8.0",
+        "@typescript-eslint/parser": "^7.8.0",
+        "autoprefixer": "^10.4.2",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^8.27.0",
+        "eslint-config-next": "^14.0.3",
+        "eslint-config-prettier": "^7.1.0",
+        "eslint-plugin-prettier": "^3.3.0",
+        "postcss": "^8.4.6",
+        "prettier": "2.2.1",
+        "tailwindcss": "^3.0.22",
+        "typescript": "^5.4.5"
+    }
 }
