--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "lint": "next lint",
         "lint:fix": "next lint --fix",
         "prettier:fix": "prettier --write --ignore-path .gitignore .",
-        "tsc:check": "tsc --noEmit"
+        "tsc:check": "tsc --noEmit",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build"
     },
     "dependencies": {
         "@apollo/client": "^3.10.1",
@@ -19,12 +21,22 @@
         "next": "^14.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "storybook": "^8.0.9",
         "swr": "^1.3.0"
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.12.1",
         "@babel/preset-react": "^7.18.6",
+        "@chromatic-com/storybook": "^1.3.3",
         "@next/eslint-plugin-next": "^10.0.4",
+        "@storybook/addon-essentials": "^8.0.9",
+        "@storybook/addon-interactions": "^8.0.9",
+        "@storybook/addon-links": "^8.0.9",
+        "@storybook/addon-onboarding": "^8.0.9",
+        "@storybook/blocks": "^8.0.9",
+        "@storybook/nextjs": "^8.0.9",
+        "@storybook/react": "^8.0.9",
+        "@storybook/test": "^8.0.9",
         "@tailwindcss/forms": "^0.5.2",
         "@types/node": "^20.12.7",
         "@types/react": "^18.3.1",
@@ -36,6 +48,7 @@
         "eslint-config-next": "^14.0.3",
         "eslint-config-prettier": "^7.1.0",
         "eslint-plugin-prettier": "^3.3.0",
+        "eslint-plugin-storybook": "^0.8.0",
         "postcss": "^8.4.6",
         "prettier": "2.2.1",
         "tailwindcss": "^3.0.22",
